# healthcare_assistant_with_agentos

./: README.md  pyproject.toml
src/: main.py
src/agents/: agent_case_history.py  agent_emergency_checklist.py  agent_resource_availability_check.py  agent_schema.py  agent_smart_automation.py  orchestrator.py
src/core/: config.py
src/models/data/: hospital_details.json  resource_availability.json
src/services/agentos/: exceptions.py  http.py  log.py  schemas.py
src/services/qdrant/: vector_db.py
src/services/qdrant/data/: qdrant_data.json
